# SCADA-IDS-KC

./: .gitignore  Dockerfile.windows-build  LICENSE  Makefile  QUICKSTART.md  README.md  README_WINDOWS_BUILD.md  SCADA-IDS-KC-fixed.spec  SCADA-IDS-KC.spec  SIKC.cfg  SIKC.cfg.backup  build_linux.sh  build_report_windows_pe_20250719-111300.txt  build_report_windows_pe_20250719-121828.txt  build_windows.bat  build_windows.ps1  build_windows.sh  build_windows_enhanced.sh  main.py  pyproject.toml  pytest.ini  requirements-windows.txt  requirements.txt  setup_dev.py  setup_windows_deps.ps1  setup_wine_python.sh  test_interface_debugging.py  validate_build.py  validate_windows_build.py
.claude/: fix-claude.bat  fix-path.ps1  settings.local.json  test-claude.bat  windows-installation-guide.md
.github/workflows/: build-windows.yml  build-with-npcap.yml  build-without-npcap.yml
analysis/: README.md  run_all_analysis.py
analysis/reports/: COMPREHENSIVE_CODE_REVIEW_REPORT.md  IMMEDIATE_ACTION_ITEMS.md  SECURITY_CHECKLIST.md
analysis/scripts/: code_quality_assessment.py  error_handling_assessment.py  feature_parity_analysis.py  fix_security_issues.py  performance_analysis.py  security_assessment.py  technical_health_check.py  test_cli_gui_parity.py  test_gui_packet_capture.py
build-tools/: README.md
config/: default.yaml  log_config.json
config/backups/: cli_test_backup.json  final_test.cfg  final_test.json  (+3 more)
docker/: README.md  docker-compose.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUILD_WINDOWS_README.md  CHANGELOG.md  CONFIGURATION_SYSTEM.md  CONFIGURATION_SYSTEM_SUMMARY.md  CROSS_COMPILATION_GUIDE.md  DEFINITIVE_PACKET_CAPTURE_PROOF.md  DOCUMENTATION_INDEX.md  EXE_COMPREHENSIVE_TEST_RESULTS.md  FINAL_TESTING_EXECUTIVE_SUMMARY.md  FINAL_VERIFICATION_COMPLETE.md  FINAL_VERIFICATION_REPORT.md  GETTING_STARTED.md  GUI_COMPREHENSIVE_TEST_RESULTS.md  GUI_USER_GUIDE.md  GUI_VERIFICATION.md  INSTALLATION.md  ML_MODEL_LOADING_FIX_REPORT.md  MODULE_REFERENCE.md  NPCAP_AUTOMATION_GUIDE.md  NPCAP_CONFIGURATION_GUIDE.md  PACKET_LOG_ANALYSIS.md  QUICKSTART.md  README_WINDOWS_BUILD.md  REPOSITORY_ORGANIZATION.md  SCADA_IDS_ARCHITECTURE_OVERVIEW.md  SCADA_IDS_EXE_TEST_SUMMARY.md  SECURITY_AUDIT_REPORT.md  TECHNICAL_DOCUMENTATION.md  TROUBLESHOOTING.md  USER_GUIDE.md  test_results_summary.md
models/: README.md  create_dummy_models.py  syn_model.joblib  syn_scaler.joblib
npcap/: fallback_info.json
packaging/: README.md  SCADA-IDS-KC-main.spec  SCADA-IDS-KC.spec  hook-plyer.py  hook-scada_ids.py  pyi_rth_plyer.py  pyi_rth_scada.py  scada.spec  scada_ids.nsi  scada_simple.spec  scada_windows.spec  skada_ids.nsi  skada_windows.spec  version_info.txt
scripts/: README.md  build-windows-fixed.ps1  build-windows10.ps1  build-with-npcap.ps1  build-without-npcap.ps1  build_docker.sh  build_linux.sh  build_windows.ps1  build_with_npcap.py  generate_network_traffic.ps1  prepare_npcap.py  setup_windows_deps.ps1  test-build.ps1  test-windows10-build.ps1
tests/: __init__.py  conftest.py  critical_functionality_verification.py  gui_critical_verification.py  test_config_validator.py  test_cross_platform.py  test_features.py  test_gui_functionality.py  test_gui_functionality_manual.py  test_gui_monitoring_manual.py  test_integration.py  test_ml.py  test_packet_capture_and_ml.py  test_performance.py  test_security.py  test_settings.py  test_syn_detection.py  test_system.py  test_ui.py
(+47 files in other folders)
