[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skada-ids-kc"
version = "1.0.0"
description = "Network Intrusion Detection System with ML-based SYN flood detection"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "SKADA-IDS-KC Team", email = "team@skada-ids-kc.org"}
]
maintainers = [
    {name = "SKADA-IDS-KC Team", email = "team@skada-ids-kc.org"}
]
keywords = ["ids", "intrusion-detection", "network-security", "syn-flood", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"
dependencies = [
    "scapy==2.5.0",
    "PyQt6==6.7.0",
    "scikit-learn==1.5.0",
    "joblib==1.5.0",
    "pydantic==2.7.1",
    "PyYAML==6.0.1",
    "win10toast-click==0.1.3; sys_platform=='win32'",
    "plyer==2.1.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "psutil==5.9.8",
    "colorlog==6.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-qt==4.4.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
build = [
    "pyinstaller==6.6.0",
]

[project.urls]
Homepage = "https://github.com/skada-ids-kc/skada-ids-kc"
Documentation = "https://github.com/skada-ids-kc/skada-ids-kc/docs"
Repository = "https://github.com/skada-ids-kc/skada-ids-kc.git"
Issues = "https://github.com/skada-ids-kc/skada-ids-kc/issues"

[project.scripts]
skada-ids-kc = "ui.main_window:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.ico", "*.qrc"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "scapy.*",
    "win10toast.*",
    "plyer.*",
    "PyQt6.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gui: marks tests that require GUI components",
    "network: marks tests that require network access",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:.*PyQt.*:DeprecationWarning",
]
